--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "chance": "^1.1.11",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "jsonwebtoken": "^9.0.2",
